# custard

./: Cargo.toml  README.md
demo/: custard.ron
demo/scripts/: main.lua  main.rhai
src/: app.rs  handler.rs  keyboard.rs  main.rs  state.rs  terminal.rs
src/layout/: mod.rs
src/scripting/: meta.rs  mod.rs  rand.rs  time.rs
src/start/: mod.rs
src/text/: mod.rs  style.rs
