[package]
name = "custard"
version = "0.1.0"
edition = "2021"
authors = ["veritius <veritiusgaming@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A text adventure game engine."

[dependencies]
smallvec = "1"
smartstring = "1"

[dependencies.crossterm]
version = "0.27"

[dependencies.rhai]
version = "1"
features = ["sync"]